syntax = "proto3";

package auth;
option go_package = "github.com/malaxitlmax/penfeel/api/proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string error = 2;
  string user_id = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string error = 2;
  string token = 3;
  string refresh_token = 4;
  UserInfo user = 5;
}

message UserInfo {
  string id = 1;
  string username = 2;
  string email = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string error = 2;
  UserInfo user = 3;
} 